--- a/ref/lime.ipynb
+++ b/ref/lime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,88 +103,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score 0.5332323742217735\n",
-      "Accuracy 0.9442270058708415\n"
+      "F1 Score 0.5496101856525886\n",
+      "Accuracy 0.9461839530332681\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/interpret/visual/udash.py:5: UserWarning: \n",
-      "The dash_html_components package is deprecated. Please replace\n",
-      "`import dash_html_components as html` with `from dash import html`\n",
-      "  import dash_html_components as html\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/interpret/visual/udash.py:6: UserWarning: \n",
-      "The dash_core_components package is deprecated. Please replace\n",
-      "`import dash_core_components as dcc` with `from dash import dcc`\n",
-      "  import dash_core_components as dcc\n",
-      "/home/daniel/.local/lib/python3.8/site-packages/interpret/visual/udash.py:7: UserWarning: \n",
-      "The dash_table package is deprecated. Please replace\n",
-      "`import dash_table` with `from dash import dash_table`\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
       "\n",
-      "Also, if you're using any of the table format helpers (e.g. Group), replace \n",
-      "`from dash_table.Format import Group` with \n",
-      "`from dash.dash_table.Format import Group`\n",
-      "  import dash_table as dt\n"
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n",
+      "/home/daniel/.local/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/139978675024272/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/139978675024272/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/140633805981632/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/140633805981632/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -211,6 +239,24 @@
     "\n",
     "show(lime_local)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method ForestClassifier.predict_proba of RandomForestClassifier()>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
